--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>X-Streamify — Phase 10 Merge</title>
+  <title>X-Streamify — Library</title>
 
-  <link rel="stylesheet" href="tailwind.css" />
+  <!-- IMPORTANT: the leading slash makes sure the CSS loads -->
+  <link rel="stylesheet" href="/tailwind.css" />
+
   <style>
     .container { max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
     .shadow-soft { box-shadow: 0 10px 20px rgba(0,0,0,.15); }
+    /* Hide admin-only controls */
+    [data-hide]{ display:none !important; }
   </style>
 
-  <script type="module" defer src="./js/phase10.js"></script>
+  <!-- Your app JS -->
+  <script type="module" defer src="/js/phase10.js"></script>
 </head>
 <body class="bg-neutral-950 text-neutral-100 antialiased">
   <!-- Header -->
@@ -23,20 +28,19 @@
       </div>
 
       <nav class="hidden md:flex items-center gap-2 text-sm">
-        <button data-nav="featured" class="nav-btn px-3 py-2 rounded-xl border border-red-600 text-red-400">Featured</button>
+        <button data-nav="featured" class="nav-btn px-3 py-2 rounded-xl border border-red-600 text-red-400">Home</button>
         <button data-nav="library"  class="nav-btn px-3 py-2 rounded-xl border border-neutral-700">My Library</button>
-        <button data-nav="how"      class="nav-btn px-3 py-2 rounded-xl border border-neutral-700">How It Works</button>
-        <button data-nav="add"      class="nav-btn px-3 py-2 rounded-xl border border-neutral-700">Add Movie</button>
+        <button data-nav="add"      class="nav-btn px-3 py-2 rounded-xl border border-neutral-700">Add to Library</button>
         <button data-nav="vault"    class="nav-btn px-3 py-2 rounded-xl border border-neutral-700">Your Vault</button>
       </nav>
 
-      <div class="flex items-center gap-2">
+      <!-- Admin-only (hidden) -->
+      <div class="flex items-center gap-2" data-hide>
         <button id="btn-export" class="px-3 py-2 text-sm rounded-xl border border-neutral-700">Export JSON</button>
         <label for="import-input" class="px-3 py-2 text-sm rounded-xl border border-neutral-700 cursor-pointer">
           Import JSON
           <input id="import-input" type="file" accept="application/json" class="hidden" />
         </label>
-        <button data-nav="add" class="px-3 py-2 text-sm rounded-xl bg-red-600 hover:opacity-90">Add Movies</button>
       </div>
     </div>
   </header>
@@ -47,10 +51,10 @@
     <section id="hero" class="grid md:grid-cols-2 gap-8 items-center">
       <div>
         <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">
-          Build your personal streaming library.
+          Your personal streaming library.
         </h1>
         <p class="mt-3 text-neutral-300">
-          Import your DVDs and files, organize your vault, and stream your own collection anytime.
+          Add your movies with a poster and a link to play them. Favorite what you love.
         </p>
 
         <div class="mt-6 space-y-3">
@@ -69,11 +73,11 @@
 
       <div class="rounded-2xl border border-neutral-800 p-4 shadow-soft">
         <div class="aspect-video rounded-xl bg-neutral-900 grid place-items-center">
-          <span class="opacity-60">Your Hero Poster</span>
+          <span class="opacity-60">Welcome to your library</span>
         </div>
         <div class="mt-4">
-          <h3 class="text-xl font-semibold">Feature Highlight</h3>
-          <p class="text-neutral-400 text-sm">Keep, organize, and stream your owned media in one beautiful place.</p>
+          <h3 class="text-xl font-semibold">Tip</h3>
+          <p class="text-neutral-400 text-sm">Click a poster to play the movie in a new tab.</p>
         </div>
       </div>
     </section>
@@ -82,7 +86,7 @@
     <section id="section-featured" class="space-y-4">
       <div class="flex items-center justify-between">
         <h2 class="text-2xl font-bold">Featured</h2>
-        <div class="text-sm text-neutral-400">Hand-picked highlights</div>
+        <div class="text-sm text-neutral-400">A few picks from your library</div>
       </div>
       <div id="featured-grid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
     </section>
@@ -100,28 +104,9 @@
       <div id="library-grid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
     </section>
 
-    <!-- How It Works -->
-    <section id="section-how" class="space-y-6 hidden">
-      <h2 class="text-2xl font-bold">How It Works</h2>
-      <ol class="grid md:grid-cols-3 gap-4 text-neutral-300">
-        <li class="rounded-2xl border border-neutral-800 p-4">
-          <h3 class="font-semibold mb-2">1) Add Your Movies</h3>
-          <p>Use <em>Add Movies</em> to enter title, poster URL, and (optionally) a stream URL.</p>
-        </li>
-        <li class="rounded-2xl border border-neutral-800 p-4">
-          <h3 class="font-semibold mb-2">2) Organize &amp; Favorite</h3>
-          <p>Switch views, use filters, and tap the heart to favorite any title.</p>
-        </li>
-        <li class="rounded-2xl border border-neutral-800 p-4">
-          <h3 class="font-semibold mb-2">3) Backup / Restore</h3>
-          <p>Use <em>Export JSON</em> to back up; use <em>Import JSON</em> to restore or move to another device.</p>
-        </li>
-      </ol>
-    </section>
-
     <!-- Add a New Movie -->
     <section id="section-add" class="space-y-4 hidden">
-      <h2 class="text-2xl font-bold">Add a New Movie</h2>
+      <h2 class="text-2xl font-bold">Add to Library</h2>
       <div class="grid md:grid-cols-2 gap-6">
         <form id="add-form" class="rounded-2xl border border-neutral-800 p-4 space-y-3">
           <div>
@@ -130,11 +115,11 @@
           </div>
           <div>
             <label class="block text-sm mb-1">Poster URL</label>
-            <input name="poster" class="w-full px-3 py-2 rounded-xl bg-neutral-900 border border-neutral-800" placeholder="https://…" />
+            <input name="poster" class="w-full px-3 py-2 rounded-xl bg-neutral-900 border border-neutral-800" placeholder="/img/inception.jpg or https://…" />
           </div>
           <div>
-            <label class="block text-sm mb-1">Stream URL (optional)</label>
-            <input name="url" class="w-full px-3 py-2 rounded-xl bg-neutral-900 border border-neutral-800" placeholder="https://…" />
+            <label class="block text-sm mb-1">Play URL</label>
+            <input name="url" class="w-full px-3 py-2 rounded-xl bg-neutral-900 border border-neutral-800" placeholder="/media/inception.mp4 or https://…" />
           </div>
           <div class="flex gap-2">
             <button class="px-4 py-2 rounded-xl bg-red-600" type="submit">Add</button>
@@ -145,10 +130,10 @@
 
         <div class="rounded-2xl border border-neutral-800 p-4">
           <div class="aspect-video rounded-xl bg-neutral-900 grid place-items-center">
-            <span class="opacity-60">Poster preview appears in your grids</span>
+            <span class="opacity-60">Posters show in your grids</span>
           </div>
           <p class="text-neutral-400 text-sm mt-3">
-            Tip: You can always back up everything via <em>Export JSON</em>.
+            Click a poster to play the movie in a new tab.
           </p>
         </div>
       </div>
@@ -158,11 +143,7 @@
     <section id="section-vault" class="space-y-6 hidden">
       <div class="flex items-center justify-between">
         <h2 class="text-2xl font-bold">Your Vault</h2>
-        <div class="flex items-center gap-2 text-sm">
-          <button data-vtab="movies" class="vault-tab px-3 py-1 rounded-lg border border-neutral-700">Movies</button>
-          <button data-vtab="docs"   class="vault-tab px-3 py-1 rounded-lg border border-neutral-700">Docs</button>
-          <button data-vtab="pics"   class="vault-tab px-3 py-1 rounded-lg border border-neutral-700">Pictures</button>
-        </div>
+        <div class="text-sm text-neutral-400"><span id="vault-count">0</span> items</div>
       </div>
 
       <div class="grid md:grid-cols-[220px_1fr] gap-6">
@@ -170,7 +151,6 @@
           <h3 class="font-semibold mb-3">Folders</h3>
           <ul class="space-y-1 text-sm">
             <li><button data-vfolder="all"        class="w-full text-left px-2 py-1 rounded-lg border border-neutral-800">All</button></li>
-            <li><button data-vfolder="genre"      class="w-full text-left px-2 py-1 rounded-lg border border-neutral-800">By Genre</button></li>
             <li><button data-vfolder="recent"     class="w-full text-left px-2 py-1 rounded-lg border border-neutral-800">Recently Added</button></li>
             <li><button data-vfolder="favorites"  class="w-full text-left px-2 py-1 rounded-lg border border-neutral-800">Favorites</button></li>
           </ul>
@@ -179,7 +159,6 @@
         <div>
           <div class="flex items-center justify-between mb-3">
             <h3 id="vault-heading" class="font-semibold">Movies / All</h3>
-            <div class="text-sm text-neutral-400"><span id="vault-count">0</span> items</div>
           </div>
           <div id="vault-grid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
         </div>
@@ -187,14 +166,14 @@
     </section>
   </main>
 
+  <!-- Toast -->
   <div id="toast" class="fixed bottom-4 left-1/2 -translate-x-1/2 px-4 py-2 rounded-xl bg-neutral-900 border border-neutral-800 shadow-soft text-sm hidden"></div>
 
   <!-- Card template -->
   <template id="card-tpl">
     <div class="group relative rounded-2xl overflow-hidden border border-neutral-800 bg-neutral-900">
-      <!-- We DO NOT rely on tailwind-aspect. We create a fixed 2:3 box using padding-top -->
       <div class="poster relative bg-neutral-950">
-        <div class="pt-[150%]"></div> <!-- 2:3 ratio (height = 150% of width) -->
+        <div class="pt-[150%]"></div>
         <span class="absolute inset-0 grid place-items-center opacity-50 text-xs">No Poster</span>
       </div>
       <div class="absolute top-2 right-2">
