--- a/public/signin.html
+++ b/public/signin.html
@@ -34,8 +34,8 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <div class="hd">Welcome back</div>
-      <div class="sub">Sign in or create an account to continue.</div>
+      <div class="hd">X-Streamify</div>
+<div class="sub">Your Movies. Your Stream. Anytime.</div>>
 
       <!-- Sign In / Sign Up -->
       <form id="auth-form">
