--- a/public/index.html
+++ b/public/index.html
@@ -3,225 +3,43 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>X-Streamify — Phase 10 Merge</title>
+  <title>X-Streamify</title>
 
-  <link rel="stylesheet" href="tailwind.css" />
-  <link rel="stylesheet" href="profiles.css" />
-  <style>
-    .container { max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
-    .shadow-soft { box-shadow: 0 10px 20px rgba(0,0,0,.15); }
-  </style>
+  <!-- 1) Shared keys (must be first) -->
+  <script src="./js/keys.js"></script>
 
-  <script type="module" defer src="./js/phase10.js"></script>
+  <!-- 2) Supabase client -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" defer></script>
+
+  <link rel="stylesheet" href="./tailwind.css" />
 </head>
-<body class="bg-neutral-950 text-neutral-100 antialiased">
-  <!-- Header -->
-  <header class="w-full border-b border-neutral-800 sticky top-0 bg-neutral-950/80 backdrop-blur z-50">
-    <div class="container flex items-center justify-between py-3">
-      <div class="flex items-center gap-3">
-        <div class="h-9 w-9 rounded-lg bg-red-600 grid place-items-center font-black text-xl leading-none">X</div>
-        <span class="text-xl md:text-2xl font-semibold tracking-tight">X-Streamify</span>
-      </div>
-
-      <nav class="hidden md:flex items-center gap-2 text-sm">
-        <button data-nav="featured" class="nav-btn px-3 py-2 rounded-xl border border-red-600 text-red-400">Featured</button>
-        <button data-nav="library"  class="nav-btn px-3 py-2 rounded-xl border border-neutral-700">My Library</button>
-        <button data-nav="how"      class="nav-btn px-3 py-2 rounded-xl border border-neutral-700">How It Works</button>
-        <button data-nav="add"      class="nav-btn px-3 py-2 rounded-xl border border-neutral-700">Add Movie</button>
-        <button data-nav="vault"    class="nav-btn px-3 py-2 rounded-xl border border-neutral-700">Your Vault</button>
-      </nav>
-      <div class="flex items-center gap-2">
-        <button id="btn-export" class="px-3 py-2 text-sm rounded-xl border border-neutral-700">Export JSON</button>
-        <label for="import-input" class="px-3 py-2 text-sm rounded-xl border border-neutral-700 cursor-pointer">
-          Import JSON
-          <input id="import-input" type="file" accept="application/json" class="hidden" />
-        </label>
-        <button data-nav="add" class="px-3 py-2 text-sm rounded-xl bg-red-600 hover:opacity-90">Add Movies</button>
-      </div>
-    </div>
+<body class="bg-gray-50 text-gray-900">
+  <header class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between">
+    <div class="text-xl font-bold">X-Streamify</div>
+    <div id="user-pill"></div>
   </header>
 
-  <!-- Main -->
-  <main class="container space-y-12 py-8">
-    <!-- Hero -->
-    <section id="hero" class="grid md:grid-cols-2 gap-8 items-center">
-      <div>
-        <h1 class="text-3xl md:text-5xl font-extrabold leading-tight">
-          Build your personal streaming library.
-        </h1>
-        <p class="mt-3 text-neutral-300">
-          Import your DVDs and files, organize your vault, and stream your own collection anytime.
-        </p>
-
-        <div class="mt-6 space-y-3">
-          <div class="flex gap-2">
-            <input id="global-search" class="w-full px-4 py-3 rounded-xl bg-neutral-900 border border-neutral-800"
-                   placeholder="Search your library…" />
-            <button id="search-clear" class="px-3 py-2 rounded-xl border border-neutral-700">Clear</button>
-          </div>
-          <div class="flex flex-wrap gap-2">
-            <button data-quick="recent" class="px-3 py-2 text-sm rounded-xl border border-neutral-700">Recently Added</button>
-            <button data-quick="fav"    class="px-3 py-2 text-sm rounded-xl border border-neutral-700">Favorites</button>
-            <button data-quick="all"    class="px-3 py-2 text-sm rounded-xl border border-neutral-700">All</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="rounded-2xl border border-neutral-800 p-4 shadow-soft">
-        <div class="aspect-video rounded-xl bg-neutral-900 grid place-items-center">
-          <span class="opacity-60">Your Hero Poster</span>
-        </div>
-        <div class="mt-4">
-          <h3 class="text-xl font-semibold">Feature Highlight</h3>
-          <p class="text-neutral-400 text-sm">Keep, organize, and stream your owned media in one beautiful place.</p>
-        </div>
-      </div>
+  <main class="max-w-6xl mx-auto px-4 py-4 space-y-8">
+    <section class="rounded-2xl bg-white shadow p-4">
+      <h2 class="text-lg font-semibold mb-3">Add a Movie</h2>
+      <form id="add-form" class="grid gap-3 md:grid-cols-4">
+        <input id="add-title" type="text" placeholder="Title (e.g., Braveheart)" class="border rounded-xl px-3 py-2" required />
+        <input id="add-poster" type="url" placeholder="Poster URL (optional)" class="border rounded-xl px-3 py-2" />
+        <input id="add-year" type="number" min="1888" max="2100" placeholder="Year (optional)" class="border rounded-xl px-3 py-2" />
+        <button type="submit" class="rounded-xl border px-4 py-2 hover:bg-gray-50">Add to Library</button>
+      </form>
     </section>
 
-    <!-- Featured -->
-    <section id="section-featured" class="space-y-4">
-      <div class="flex items-center justify-between">
-        <h2 class="text-2xl font-bold">Featured</h2>
-        <div class="text-sm text-neutral-400">Hand-picked highlights</div>
-      </div>
-      <div id="featured-grid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
-    </section>
-
-    <!-- My Library -->
-    <section id="section-library" class="space-y-4 hidden">
-      <div class="flex items-center justify-between">
-        <h2 class="text-2xl font-bold">My Library</h2>
-        <div class="flex items-center gap-2 text-sm">
-          <button data-filter="all"    class="lib-filter px-3 py-1 rounded-lg border border-neutral-700">All</button>
-          <button data-filter="recent" class="lib-filter px-3 py-1 rounded-lg border border-neutral-700">Recently Added</button>
-          <button data-filter="fav"    class="lib-filter px-3 py-1 rounded-lg border border-neutral-700">Favorites</button>
-        </div>
-      </div>
-      <div id="library-grid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
-    </section>
-
-    <!-- How It Works -->
-    <section id="section-how" class="space-y-6 hidden">
-      <h2 class="text-2xl font-bold">How It Works</h2>
-      <ol class="grid md:grid-cols-3 gap-4 text-neutral-300">
-        <li class="rounded-2xl border border-neutral-800 p-4">
-          <h3 class="font-semibold mb-2">1) Add Your Movies</h3>
-          <p>Use <em>Add Movies</em> to enter title, poster URL, and (optionally) a stream URL.</p>
-        </li>
-        <li class="rounded-2xl border border-neutral-800 p-4">
-          <h3 class="font-semibold mb-2">2) Organize &amp; Favorite</h3>
-          <p>Switch views, use filters, and tap the heart to favorite any title.</p>
-        </li>
-        <li class="rounded-2xl border border-neutral-800 p-4">
-          <h3 class="font-semibold mb-2">3) Backup / Restore</h3>
-          <p>Use <em>Export JSON</em> to back up; use <em>Import JSON</em> to restore or move to another device.</p>
-        </li>
-      </ol>
-    </section>
-
-    <!-- Add a New Movie -->
-    <section id="section-add" class="space-y-4 hidden">
-      <h2 class="text-2xl font-bold">Add a New Movie</h2>
-      <div class="grid md:grid-cols-2 gap-6">
-        <form id="add-form" class="rounded-2xl border border-neutral-800 p-4 space-y-3">
-          <div>
-            <label class="block text-sm mb-1">Title</label>
-            <input name="title" required class="w-full px-3 py-2 rounded-xl bg-neutral-900 border border-neutral-800" placeholder="e.g., Inception" />
-          </div>
-          <div>
-            <label class="block text-sm mb-1">Poster URL</label>
-            <input name="poster" class="w-full px-3 py-2 rounded-xl bg-neutral-900 border border-neutral-800" placeholder="https://…" />
-          </div>
-          <div>
-            <label class="block text-sm mb-1">Stream URL (optional)</label>
-            <input name="url" class="w-full px-3 py-2 rounded-xl bg-neutral-900 border border-neutral-800" placeholder="https://…" />
-          </div>
-          <div class="flex gap-2">
-            <button class="px-4 py-2 rounded-xl bg-red-600" type="submit">Add</button>
-            <button id="add-reset" class="px-4 py-2 rounded-xl border border-neutral-700" type="button">Reset</button>
-          </div>
-          <p id="add-msg" class="text-sm text-neutral-400"></p>
-        </form>
-
-        <div class="rounded-2xl border border-neutral-800 p-4">
-          <div class="aspect-video rounded-xl bg-neutral-900 grid place-items-center">
-            <span class="opacity-60">Poster preview appears in your grids</span>
-          </div>
-          <p class="text-neutral-400 text-sm mt-3">
-            Tip: You can always back up everything via <em>Export JSON</em>.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Your Vault -->
-    <section id="section-vault" class="space-y-6 hidden">
-      <div class="flex items-center justify-between">
-        <h2 class="text-2xl font-bold">Your Vault</h2>
-        <div class="flex items-center gap-2 text-sm">
-          <button data-vtab="movies" class="vault-tab px-3 py-1 rounded-lg border border-neutral-700">Movies</button>
-          <button data-vtab="docs"   class="vault-tab px-3 py-1 rounded-lg border border-neutral-700">Docs</button>
-          <button data-vtab="pics"   class="vault-tab px-3 py-1 rounded-lg border border-neutral-700">Pictures</button>
-        </div>
-      </div>
-
-      <div class="grid md:grid-cols-[220px_1fr] gap-6">
-        <aside class="rounded-2xl border border-neutral-800 p-4 h-fit">
-          <h3 class="font-semibold mb-3">Folders</h3>
-          <ul class="space-y-1 text-sm">
-            <li><button data-vfolder="all"        class="w-full text-left px-2 py-1 rounded-lg border border-neutral-800">All</button></li>
-            <li><button data-vfolder="genre"      class="w-full text-left px-2 py-1 rounded-lg border border-neutral-800">By Genre</button></li>
-            <li><button data-vfolder="recent"     class="w-full text-left px-2 py-1 rounded-lg border border-neutral-800">Recently Added</button></li>
-            <li><button data-vfolder="favorites"  class="w-full text-left px-2 py-1 rounded-lg border border-neutral-800">Favorites</button></li>
-          </ul>
-        </aside>
-
-        <div>
-          <div class="flex items-center justify-between mb-3">
-            <h3 id="vault-heading" class="font-semibold">Movies / All</h3>
-            <div class="text-sm text-neutral-400"><span id="vault-count">0</span> items</div>
-          </div>
-          <div id="vault-grid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
-        </div>
-      </div>
+    <section>
+      <h2 class="text-lg font-semibold mb-3">My Library</h2>
+      <p id="empty-state" class="text-gray-500 hidden">No items yet. Add your first movie above.</p>
+      <div id="library-grid" class="grid gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"></div>
     </section>
   </main>
 
-  <div id="toast" class="fixed bottom-4 left-1/2 -translate-x-1/2 px-4 py-2 rounded-xl bg-neutral-900 border border-neutral-800 shadow-soft text-sm hidden"></div>
-
-  <!-- Card template -->
-  <template id="card-tpl">
-    <div class="group relative rounded-2xl overflow-hidden border border-neutral-800 bg-neutral-900">
-      <!-- We DO NOT rely on tailwind-aspect. We create a fixed 2:3 box using padding-top -->
-      <div class="poster relative bg-neutral-950">
-        <div class="pt-[150%]"></div> <!-- 2:3 ratio (height = 150% of width) -->
-        <span class="absolute inset-0 grid place-items-center opacity-50 text-xs">No Poster</span>
-      </div>
-      <div class="absolute top-2 right-2">
-        <button class="fav-btn h-8 w-8 rounded-full bg-neutral-950/70 border border-neutral-800 grid place-items-center focus:outline-none">♡</button>
-      </div>
-      <div class="p-2">
-        <div class="title line-clamp-1 text-sm font-medium">Title</div>
-      </div>
-    </div>
-  </template>
-  <!-- Profiles Overlay -->
-<div id="profileOverlay" class="fixed inset-0 bg-black/70 backdrop-blur-sm hidden">
-  <div class="mx-auto max-w-4xl h-full flex flex-col items-center justify-center px-6">
-    <h2 class="text-3xl md:text-4xl font-bold mb-8 text-white/90">Who’s watching?</h2>
-    <div id="profileGrid" class="grid grid-cols-2 md:grid-cols-4 gap-6 w-full"></div>
-    <div class="mt-10 flex items-center justify-center w-full">
-      <div id="profileDock" class="profile-dock"></div>
-    </div>
-  </div>
-</div>
-
-<!-- Quick switch button -->
-<button id="switchProfileBtn" class="fixed bottom-5 right-5 px-3 py-2 rounded-full bg-white/10 text-white/80 hover:bg-white/20 border border-white/10">
-  Switch Profile
-</button>
-
-<!-- Profiles logic -->
-<script type="module" src="./js/profiles.js"></script>
+  <!-- Keep only these, in this order -->
+  <script defer src="./js/db.js" type="module"></script>
+  <script defer src="./js/profiles.js" type="module"></script>
+  <script defer src="./js/library-adapter.js" type="module"></script>
 </body>
 </html>
