--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,53 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>X-Streamify — Phase 14</title>
-  <link rel="stylesheet" href="/css/styles.css" />
+  <title>X‑Streamify — Your movies, photos & home videos in one stream</title>
+  <meta name="description" content="X‑Streamify turns your DVDs, photos, and home videos into your personal streaming library." />
+  <meta name="theme-color" content="#0a0a0a" />
+  <style>
+    :root { color-scheme: dark; }
+    body {
+      margin: 0;
+      padding: 0;
+      background: #0a0a0a;
+      color: #fff;
+      font-family: sans-serif;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .container {
+      display: grid;
+      place-items: center;
+      height: 100vh;
+      text-align: center;
+      padding: 40px;
+    }
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 1rem;
+    }
+    p {
+      font-size: 1.25rem;
+      max-width: 600px;
+      margin: 0 auto 1.5rem;
+    }
+    a.button {
+      display: inline-block;
+      background: #e50914;
+      color: #fff;
+      padding: 12px 24px;
+      border-radius: 999px;
+      text-decoration: none;
+      font-weight: bold;
+      box-shadow: 0 0 20px rgba(229, 9, 20, 0.4);
+    }
+  </style>
 </head>
 <body>
-  <header style="padding:16px;">
-    <h1 style="margin:0;">X-Streamify</h1>
-    <button id="addToLibraryBtn" class="button">Add to Library</button>
-  </header>
-
-  <main id="content"></main>
-
-  <!-- IMPORTANT: /public is the web root. Do NOT include '/public' in the paths. -->
-  <script defer src="/js/db.js"></script>
-  <!-- render helpers BEFORE buttons so window.renderLibrary exists -->
-  <script defer src="/js/dbcodes.js"></script>
-  <!-- button wiring AFTER render helpers -->
-  <script defer src="/js/buttons.js"></script>
-
-  <script>
-    // quick boot check so we can see if db.js is loaded
-    (function () {
-      const ok = !!(window.DB || window.db);
-      console.log(ok ? "db.js loaded OK" : "db.js missing — no DB/db on window");
-    })();
-  </script>
+  <div class="container">
+    <h1>Build your personal streaming library</h1>
+    <p>Upload your DVDs, home videos, and photos into one secure, private streaming vault. It’s like Netflix — but yours.</p>
+    <a href="/signin.html" class="button">Sign In</a>
+  </div>
 </body>
 </html>
